--- a/IQ/Base.lproj/Main.storyboard
+++ b/IQ/Base.lproj/Main.storyboard
@@ -1,25 +1,169 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="evf-Ua-r2q">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--IQ-->
+        <scene sceneID="bba-Sn-ua9">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                <collectionViewController title="IQ" id="H6y-SJ-AEl" customClass="HomeController" customModule="IQ" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="bG3-cY-xCN">
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="1" minimumInteritemSpacing="2" id="sut-GB-NcY">
+                            <size key="itemSize" width="162" height="165"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="HomeCell" id="LyB-s2-aZf" customClass="HomeCell" customModule="IQ" customModuleProvider="target">
+                                <rect key="frame" x="79" y="0.0" width="162" height="165"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="162" height="165"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DhO-u4-bb6">
+                                            <rect key="frame" x="54.5" y="56" width="53" height="53"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="DhO-u4-bb6" secondAttribute="height" multiplier="1:1" id="G92-o0-2mY"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YoP-xx-1a2">
+                                            <rect key="frame" x="58" y="113" width="46.5" height="24"/>
+                                            <fontDescription key="fontDescription" type="system" weight="thin" pointSize="20"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                                <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="DhO-u4-bb6" firstAttribute="centerY" secondItem="LyB-s2-aZf" secondAttribute="centerY" id="CH7-VV-feh"/>
+                                    <constraint firstItem="DhO-u4-bb6" firstAttribute="centerX" secondItem="LyB-s2-aZf" secondAttribute="centerX" id="P6d-ms-CNn"/>
+                                    <constraint firstItem="YoP-xx-1a2" firstAttribute="top" secondItem="DhO-u4-bb6" secondAttribute="bottom" constant="4" id="QAy-ca-n7S"/>
+                                    <constraint firstItem="YoP-xx-1a2" firstAttribute="centerX" secondItem="LyB-s2-aZf" secondAttribute="centerX" id="Xf1-Cf-M5w"/>
+                                    <constraint firstAttribute="bottom" secondItem="YoP-xx-1a2" secondAttribute="bottom" constant="28" id="d2b-AE-Det"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="imageView" destination="DhO-u4-bb6" id="FdO-AF-2n3"/>
+                                    <outlet property="label" destination="YoP-xx-1a2" id="Vqa-fY-zZ5"/>
+                                </connections>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="H6y-SJ-AEl" id="AQD-pF-dY2"/>
+                            <outlet property="delegate" destination="H6y-SJ-AEl" id="MbX-e3-Mj2"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" title="IQ" id="Rha-lP-dHv"/>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="c1x-O2-xE3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="490" y="62"/>
+        </scene>
+        <!--Question List Controller-->
+        <scene sceneID="Tas-tC-R6z">
+            <objects>
+                <tableViewController storyboardIdentifier="QuestionList" id="Mmu-rG-p5Z" customClass="QuestionListController" customModule="IQ" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" sectionIndexMinimumDisplayRowCount="10" rowHeight="150" sectionHeaderHeight="28" sectionFooterHeight="28" id="U8h-0G-DMt">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="separatorColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Question" rowHeight="152" id="MaJ-fA-CvT" customClass="QuestionCell" customModule="IQ" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="320" height="152"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="MaJ-fA-CvT" id="i5R-bX-dg4">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="151.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bJv-uD-3Jj">
+                                            <rect key="frame" x="5" y="8" width="310" height="143.5"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="什么是内联函数？" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Br-Rb-gS6">
+                                                    <rect key="frame" x="10" y="10" width="290" height="19.5"/>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="csacasca" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3qb-lw-fVv">
+                                                    <rect key="frame" x="10" y="39.5" width="290" height="94"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="13"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <constraints>
+                                                <constraint firstItem="6Br-Rb-gS6" firstAttribute="centerX" secondItem="bJv-uD-3Jj" secondAttribute="centerX" id="6aj-B0-WeY"/>
+                                                <constraint firstItem="3qb-lw-fVv" firstAttribute="top" secondItem="6Br-Rb-gS6" secondAttribute="bottom" constant="10" id="F3W-hD-5dd"/>
+                                                <constraint firstItem="3qb-lw-fVv" firstAttribute="centerX" secondItem="bJv-uD-3Jj" secondAttribute="centerX" id="Pk7-B9-nQw"/>
+                                                <constraint firstAttribute="bottom" secondItem="3qb-lw-fVv" secondAttribute="bottom" constant="10" id="WYd-dF-BoT"/>
+                                                <constraint firstItem="3qb-lw-fVv" firstAttribute="leading" secondItem="6Br-Rb-gS6" secondAttribute="leading" id="gyF-bC-gev"/>
+                                                <constraint firstItem="6Br-Rb-gS6" firstAttribute="top" secondItem="bJv-uD-3Jj" secondAttribute="top" constant="10" id="yad-dE-cq4"/>
+                                                <constraint firstItem="6Br-Rb-gS6" firstAttribute="leading" secondItem="bJv-uD-3Jj" secondAttribute="leading" constant="10" id="zom-VZ-Tay"/>
+                                            </constraints>
+                                            <userDefinedRuntimeAttributes>
+                                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                    <integer key="value" value="4"/>
+                                                </userDefinedRuntimeAttribute>
+                                            </userDefinedRuntimeAttributes>
+                                        </view>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                    <constraints>
+                                        <constraint firstItem="bJv-uD-3Jj" firstAttribute="leading" secondItem="i5R-bX-dg4" secondAttribute="leading" constant="5" id="Bpb-02-gS1"/>
+                                        <constraint firstItem="bJv-uD-3Jj" firstAttribute="centerX" secondItem="i5R-bX-dg4" secondAttribute="centerX" id="R8n-La-4Iq"/>
+                                        <constraint firstAttribute="bottom" secondItem="bJv-uD-3Jj" secondAttribute="bottom" id="kOY-lJ-H7R"/>
+                                        <constraint firstItem="bJv-uD-3Jj" firstAttribute="top" secondItem="i5R-bX-dg4" secondAttribute="top" constant="8" id="zT1-ZI-sHO"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="answerLabel" destination="3qb-lw-fVv" id="cwT-ia-lUS"/>
+                                    <outlet property="titleLabel" destination="6Br-Rb-gS6" id="2RC-SF-eDP"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Mmu-rG-p5Z" id="nnl-J1-oVK"/>
+                            <outlet property="delegate" destination="Mmu-rG-p5Z" id="c3N-zh-OcL"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="MfR-3c-lpi"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rfe-rn-Wqq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="832" y="62"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="oWd-8Y-0IC">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="evf-Ua-r2q" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="diE-ym-w6h">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="barTintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="H6y-SJ-AEl" kind="relationship" relationship="rootViewController" id="gfI-ls-HmE"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LVC-at-IEH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="130" y="62"/>
         </scene>
     </scenes>
+    <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
 </document>
