--- a/IQ/Base.lproj/Main.storyboard
+++ b/IQ/Base.lproj/Main.storyboard
@@ -20,6 +20,11 @@
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
+                        <activityIndicatorView key="backgroundView" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" id="Rc5-Lp-hJL">
+                            <rect key="frame" x="142" y="233" width="37" height="37"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <color key="color" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        </activityIndicatorView>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="HomeCell" id="LyB-s2-aZf" customClass="HomeCell" customModule="IQ" customModuleProvider="target">
                                 <rect key="frame" x="79" y="0.0" width="162" height="165"/>
@@ -63,6 +68,9 @@
                         </connections>
                     </collectionView>
                     <navigationItem key="navigationItem" title="IQ" id="Rha-lP-dHv"/>
+                    <connections>
+                        <outlet property="spinner" destination="Rc5-Lp-hJL" id="5xj-Gb-cf2"/>
+                    </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="c1x-O2-xE3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
