--- a/IQ/Base.lproj/Main.storyboard
+++ b/IQ/Base.lproj/Main.storyboard
@@ -6,6 +6,47 @@
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
+        <!--关于-->
+        <scene sceneID="0Bn-DA-efR">
+            <objects>
+                <viewController id="dsf-hd-onl" customClass="AboutController" customModule="IQ" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="S1N-oM-QMb"/>
+                        <viewControllerLayoutGuide type="bottom" id="cox-Pe-xQu"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="5G9-N3-Vwm">
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Y7a-GV-0xt">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="deviceRGB"/>
+                            </webView>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="GR4-Wv-vDN">
+                                <rect key="frame" x="142" y="233" width="37" height="37"/>
+                                <color key="color" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                            </activityIndicatorView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="cox-Pe-xQu" firstAttribute="top" secondItem="Y7a-GV-0xt" secondAttribute="bottom" id="1S9-5B-bVs"/>
+                            <constraint firstItem="GR4-Wv-vDN" firstAttribute="centerX" secondItem="5G9-N3-Vwm" secondAttribute="centerX" id="8lA-B9-gt0"/>
+                            <constraint firstItem="GR4-Wv-vDN" firstAttribute="centerY" secondItem="5G9-N3-Vwm" secondAttribute="centerY" id="B14-s8-ksy"/>
+                            <constraint firstItem="Y7a-GV-0xt" firstAttribute="top" secondItem="S1N-oM-QMb" secondAttribute="bottom" id="Ohl-N3-Dp0"/>
+                            <constraint firstAttribute="trailing" secondItem="Y7a-GV-0xt" secondAttribute="trailing" id="UjX-PB-gAt"/>
+                            <constraint firstItem="Y7a-GV-0xt" firstAttribute="leading" secondItem="5G9-N3-Vwm" secondAttribute="leading" id="UwL-Ay-58z"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="关于" id="RTm-JN-REF"/>
+                    <connections>
+                        <outlet property="spinner" destination="GR4-Wv-vDN" id="j1U-JL-oI6"/>
+                        <outlet property="webView" destination="Y7a-GV-0xt" id="XvK-yJ-fs9"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HW7-gA-Dke" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="490" y="-564"/>
+        </scene>
         <!--IQ-->
         <scene sceneID="bba-Sn-ua9">
             <objects>
@@ -41,8 +82,8 @@
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YoP-xx-1a2">
-                                            <rect key="frame" x="58.5" y="114" width="46" height="23"/>
-                                            <fontDescription key="fontDescription" type="system" weight="thin" pointSize="19"/>
+                                            <rect key="frame" x="60" y="116" width="43.5" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" weight="thin" pointSize="18"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
@@ -53,7 +94,7 @@
                                 <constraints>
                                     <constraint firstItem="DhO-u4-bb6" firstAttribute="centerY" secondItem="LyB-s2-aZf" secondAttribute="centerY" id="CH7-VV-feh"/>
                                     <constraint firstItem="DhO-u4-bb6" firstAttribute="centerX" secondItem="LyB-s2-aZf" secondAttribute="centerX" id="P6d-ms-CNn"/>
-                                    <constraint firstItem="YoP-xx-1a2" firstAttribute="top" secondItem="DhO-u4-bb6" secondAttribute="bottom" constant="4" id="QAy-ca-n7S"/>
+                                    <constraint firstItem="YoP-xx-1a2" firstAttribute="top" secondItem="DhO-u4-bb6" secondAttribute="bottom" constant="6" id="QAy-ca-n7S"/>
                                     <constraint firstItem="YoP-xx-1a2" firstAttribute="centerX" secondItem="LyB-s2-aZf" secondAttribute="centerX" id="Xf1-Cf-M5w"/>
                                     <constraint firstAttribute="bottom" secondItem="YoP-xx-1a2" secondAttribute="bottom" constant="28" id="d2b-AE-Det"/>
                                 </constraints>
@@ -68,7 +109,13 @@
                             <outlet property="delegate" destination="H6y-SJ-AEl" id="MbX-e3-Mj2"/>
                         </connections>
                     </collectionView>
-                    <navigationItem key="navigationItem" title="IQ" id="Rha-lP-dHv"/>
+                    <navigationItem key="navigationItem" title="IQ" id="Rha-lP-dHv">
+                        <barButtonItem key="rightBarButtonItem" image="info" id="rsi-EH-e2V">
+                            <connections>
+                                <segue destination="dsf-hd-onl" kind="push" id="ghg-Ud-6Nn"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="spinner" destination="Rc5-Lp-hJL" id="5xj-Gb-cf2"/>
                     </connections>
@@ -174,5 +221,8 @@
             <point key="canvasLocation" x="130" y="62"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="info" width="26" height="26"/>
+    </resources>
     <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
 </document>
